# image-builder

./: .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yml  .images.yamllint  .packit.yaml  .pre-commit-config.yaml  .pylintrc  .spellcheck-en-custom.image-builder.txt  .spellcheck-en-custom.images.txt  .spellcheck-en-custom.txt  .spellcheck.images.yml  .spellcheck.yml  .yamllint  Containerfile  Containerfile.bib  Containerfile.bootc-image-builder  Containerfile.image-builder  Containerfile.images  HACKING.images.md  HACKING.md  Makefile  Makefile.image-builder  README.md  Schutzfile  action.yml  build_deploy.sh  check-spec-deps.py  codecov.yml  coverage.txt  dnf-json  entrypoint.sh  go-vendor-tools.toml  go.mod  go.sum  image-builder-cli.spec  image-builder.spec  osbuild-installer.spec  pr_check.sh  pyproject.toml  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.tekton/: image-builder-backend-pull-request.yaml  image-builder-backend-push.yaml  image-builder-pull-request.yaml  image-builder-push.yaml
bootc-image-builder/: Containerfile  README.md
devel/: Containerfile
distribution/: Dockerfile  Dockerfile-ubi  Dockerfile-ubi-maintenance  Dockerfile-ubi.dev  image-builder.service  image-builder.socket  openshift-startup.sh  osbuild-installer.service  osbuild-installer.socket
distributions/: centos-8-x86_64-packages.json  centos-8.json  centos-9-x86_64-packages.json  centos-9.json  fedora-31.json  fedora-32.json  fedora-33.json  rhel-8  rhel-8-x86_64-packages.json  rhel-8.json  rhel-84-x86_64-packages.json  rhel-84.json  rhel-85.json  (+2 more)
(+3460 files in other folders)
